--- a/KOSMOS.html
+++ b/KOSMOS.html
@@ -8,10 +8,10 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <link href="https://fonts.googleapis.com/css?family=Hind&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="Img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Img/favicon-16x16.png">
+    <link rel="manifest" href="Img/site.webmanifest">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
 
@@ -45,8 +45,9 @@
         </h1>
         <div class='btn-line'></div>
         <p class='btn-author' style="letter-spacing: 0.1em;word-spacing: 0.2em">by Bugbear 646</p>
-        <p class='btn-copy'>"KOSMOS" is a BLOG based on paradoxes based on Minkowski space and higher dimensions.</p>
+        <p class='btn-copy'>"KOSMOS" is a BLOGGING page on Minkowski Space,Quantum principles,Higher Dimensions and Space-Time paradoxes.</p>
         <a class='btn-button' id='btn_click'>BEGIN</a>
+        <a  href="https://bugbear646.github.io/Intro-Site/Home.html" class='btn-button' id='btn_click' style="margin-top:5px">Register</a>
       </div>
     </div>
   </div>
