--- a/KOSMOS.html
+++ b/KOSMOS.html
@@ -47,7 +47,7 @@
         <p class='btn-author' style="letter-spacing: 0.1em;word-spacing: 0.2em">by Bugbear 646</p>
         <p class='btn-copy'>"KOSMOS" is a BLOGGING page on Minkowski Space,Quantum principles,Higher Dimensions and Space-Time paradoxes.</p>
         <a class='btn-button' id='btn_click'>BEGIN</a>
-        <a  href="https://bugbear646.github.io/Intro-Site/Home.html" class='btn-button' id='btn_click' style="margin-top:5px">Register</a>
+        <a  href="register.html" class='btn-button' id='btn_click' style="margin-top:5px">Register</a>
       </div>
     </div>
   </div>
